<resources>
    <string name="app_name">StoriesSocial</string>
    <string name="email">Email</string>
    <string name="title_login_page">Welcome to Stories Social</string>
    <string name="message_login_page">Please fill all the data needed below</string>
    <string name="password">Password</string>
    <string name="btnLoginText">Login</string>
    <string name="message_signup_page">Please fill all the data needed below to register</string>
    <string name="name">name</string>
    <string name="noAccount">don\'t have any account yet ?</string>
    <string name="hasAccount">already have an account ?</string>
    <string name="btnSigninText">Signing</string>
    <string name="regisSuccess">registration is successful</string>
    <string name="empty">no stories</string>
    <string name="storyphoto">story\'s photo</string>
    <string name="username">name</string>
    <string name="date">date</string>
    <string name="Desc">Description</string>
    <string name="logout">logout</string>
    <string name="upload">upload</string>
    <string name="camera">camera</string>
    <string name="description">add your description here</string>
    <string name="galery">galery</string>
    <string name="loginSucces">Login Success</string>
    <string name="loginFail">Login Fail</string>
    <string name="login">login</string>
    <string name="regisFail">Registration Failed</string>
    <string name="emptyNameWarning">Name can\'t be empty</string>
    <string name="emptyEmailWarning">Email can\'t be empty</string>
    <string name="emptyPasswordWarning">Password can\'t be empty</string>
    <string name="passwrodWarning">"Password must have minimal 8 character"</string>
    <string name="EmailWarning">Email must contain @ followed by email end (e.g. com, org, edu)</string>
    <string name="EmailHint">Enter your email</string>
    <string name="PasswordHint">Enter Your Password</string>
    <string name="nameHint">Enter your name</string>
    <string name="DescriptionWarning">Description can\'t be empty</string>
    <string name="NoPicture">Please attached some picture</string>
    <string name="failAddStory">Fail to add Story</string>
    <string name="noPermission">Permission denied</string>
    <string name="cameraFail">Camera Fail</string>
    <string name="takePictureFail">Fail to take picture</string>
    <string name="cameraImage">camera image</string>
    <string name="switchCamera">switch camera</string>
    <string name="preview">preview</string>
    <string name="successAddStory">story added successfully</string>
    <string name="logo">Logo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="nullResponse">no stories found</string>
    <string name="retry">retry</string>
    <string name="errorLoad">loading error</string>
    <string name="addLocation">add location</string>
    <string name="noLocation">location is not available</string>
    <string name="prevImage">image preview</string>
    <string name="failMarker">Failed to add marker</string>
    <string name="title">Stories Social</string>
    <string name="withLocation">include locatoin</string>
</resources>