<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_view"
    android:layout_width="match_parent"
    android:layout_height="255dp"
    android:background="@color/white"
    card_view:cardBackgroundColor="@color/white"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="7dp"
    card_view:cardElevation="10dp"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/storyphoto"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/username"
            android:textSize="25sp"
            card_view:layout_constraintTop_toBottomOf="@+id/img_item_photo"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/date"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>